# mindframe

./: .env.example  .gitignore  CLAUDE.md  README.md  ideasv1.md  pyproject.toml  requirements.txt
src/: __init__.py  app.py  audio_extractor.py  caption_fetcher.py  formatter.py  frame_analyzer.py  frame_extractor.py  transcriber.py
